--- a/views/layout/home.ejs
+++ b/views/layout/home.ejs
@@ -63,12 +63,12 @@
 </section>
 
 <section id="accessories">
-    <div class="container">
+    <div class="container" style="background-image: url('../images/accessories.png'); background-size: 350px;">
         <div class="items">
             <div class="top">
                 <h1>Accessories</h1>
             </div>
-            <img src="../images/accessories.png" alt="">
+            <!-- <img src= alt=""> -->
             <div class="buttom">
                 <button style="background-color: black; color: white;">Shop Now</button>
             </div>
