--- a/public/style/home.css
+++ b/public/style/home.css
@@ -27,8 +27,8 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-top: 8%;
-    padding-bottom: 15%;
+    margin-top: 10px;
+    padding: 100px  0;
     transition: .2s ease-in;
 }
 .open .items{
@@ -60,7 +60,7 @@ button{
     border: none;
     border-radius: 5px;
     height: 2.8rem;
-    width: 16vw;
+    width: 18vw;
     font-size: 15px;
     letter-spacing: .8px;
     font-weight: 500;
@@ -82,8 +82,7 @@ button{
         border-bottom: 1px solid black;
     }
     .items{
-        margin-top: 120px;
-        padding-bottom: 60%;
+        padding: 28% 0;
     }
     button{
         height: 3rem;
