--- a/public/style/navBar.css
+++ b/public/style/navBar.css
@@ -48,8 +48,11 @@ ul li a:hover{
     width: 340px;
     height: 100vh;
     background-color: white;
-    z-index: 2;
-    transition: right .4s ease-in-out;
+    z-index: 1;
+    /* transition: right .4s ease-in-out; */
+    transition-delay: .3s;
+    transition: .3s ease-in-out;
+
 }
 .hamburgerMenu.open{
     right: 0px;
@@ -64,7 +67,7 @@ ul li a:hover{
     padding: 10px;
     margin: 25px;
     background-color: transparent;
-    transition: .5s;
+    transition: .3s;
 }.hamburgerMenu button:hover{
     background-color: rgb(229, 229, 229);
 }
@@ -95,7 +98,7 @@ ul li a:hover{
     inset: 0;
     background-color: rgba(0,0,0, .3);
     backdrop-filter: blur(5px);
-    transition: left 1s ease-in;
+    z-index: 1;
 }
 .background.open{
     display: initial;
