--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -19,7 +19,7 @@
 
     <%- body %>
 
-    <script>
+    <script defer>
         const preloder = document.getElementById('preloder');
         window.addEventListener('load', function(){
             preloder.style.display = 'none';
