--- a/public/style/home.css
+++ b/public/style/home.css
@@ -27,8 +27,8 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-top: 10px;
-    padding: 100px  0;
+    margin-top:95px;
+    padding-bottom: 195px;
     transition: .2s ease-in;
 }
 .open .items{
