--- a/public/style/home.css
+++ b/public/style/home.css
@@ -27,7 +27,7 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-top:95px;
+    margin-top:105px;
     padding-bottom: 195px;
     transition: .2s ease-in;
 }
@@ -59,8 +59,8 @@ button{
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    height: 2.8rem;
-    width: 17vw;
+    height: 3rem;
+    width: 265px;
     font-size: 15px;
     letter-spacing: .8px;
     font-weight: 500;
@@ -74,7 +74,7 @@ button{
 
 @media screen and (max-width:600px){
     .top h1{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
     .top a{
         font-size: 14px;
@@ -83,11 +83,12 @@ button{
     }
     .items{
         padding: 0;
-        margin-top:100px;
-        padding-bottom: 200px;
+        margin-top:140px;
+        padding-bottom: 250px;
+        transition: .1s ease-in;
     }
     button{
-        height: 3rem;
+        height: 2.6rem;
         width: 270px;
         font-size: 16px;
         margin: 6px 0;
