--- a/public/style/navBar.css
+++ b/public/style/navBar.css
@@ -130,6 +130,10 @@ ul li a:hover{
         height: 3rem;   
         width: 6rem;
     }
+    .hamburgerMenu{
+        right: -340px;
+        width: 260px;
+    }
 }
 
 @media screen and (min-width:1200px){
