--- a/views/navBar.ejs
+++ b/views/navBar.ejs
@@ -46,6 +46,6 @@
         </div>
     </div>
 
-    <script src="./js/navLogic.js"></script>
+    <script defer src="./js/navLogic.js"></script>
 </body>
 </html>
