--- a/public/style/home.css
+++ b/public/style/home.css
@@ -38,6 +38,9 @@ section{
 
 .top{
     text-align: center;
+    opacity: 0;
+    animation: revealItems .8s forwards;
+    animation-delay: 1s;
 }
 .top a{
     font-size: 16px;
@@ -45,10 +48,13 @@ section{
     color: black;
     border-bottom: 2px solid black;
 }
+
 .top h1{
     padding: 0 10px;
     font-size: 2.5rem;
+    color: black;
 }
+
 
 .buttom{
     display: flex;
@@ -66,12 +72,34 @@ button{
     font-weight: 500;
     padding: 5px;
     margin: 0 12px;
+    opacity: 0;
+    animation: revealItems .5s forwards;
+    animation-delay: 1s;
+}
+@keyframes revealItems{
+    30%{
+        opacity: 0;
+    }100%{
+        opacity: 1;
+    }
 }
 
 .items img{
     height: 350px;
 }
 
+@media screen and (max-width: 720px){
+    .buttom{
+        display: flex;
+        flex-direction: column;
+    }
+    button{
+        height: 2.6rem;
+        width: 270px;
+        font-size: 16px;
+        margin: 6px 0;
+    }
+}
 @media screen and (max-width:600px){
     .top h1{
         font-size: 2.2rem;
@@ -86,15 +114,5 @@ button{
         margin-top:140px;
         padding-bottom: 250px;
         transition: .1s ease-in;
-    }
-    button{
-        height: 2.6rem;
-        width: 270px;
-        font-size: 16px;
-        margin: 6px 0;
-    }
-    .buttom{
-        display: flex;
-        flex-direction: column;
     }
 }
