--- a/public/style/home.css
+++ b/public/style/home.css
@@ -22,13 +22,19 @@ section{
     position: fixed;
     top: 0;
     opacity: 0;
+    z-index: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-top:105px;
-    padding-bottom: 195px;
+    /* margin-top:105px; */
+    /* padding-bottom: 195px; */
+    margin-top: 20px;
+    padding: 95px 0;
+    /* margin-top: 15px;
+    padding: 25% 0; */
+    
     transition: .2s ease-in;
 }
 .open .items{
@@ -102,7 +108,7 @@ button{
 }
 @media screen and (max-width:600px){
     .top h1{
-        font-size: 2.2rem;
+        font-size: 2.3rem;
     }
     .top a{
         font-size: 14px;
@@ -111,8 +117,8 @@ button{
     }
     .items{
         padding: 0;
-        margin-top:140px;
-        padding-bottom: 250px;
+        margin-top: 15px;
+        padding: 25% 0;
         transition: .1s ease-in;
     }
 }
