--- a/public/style/navBar.css
+++ b/public/style/navBar.css
@@ -9,6 +9,7 @@
     padding: 0 3%;
     background-color: transparent;
     opacity: 0;
+    z-index: 1;
     animation: delayHeader 1s forwards;
     animation-delay: .5s;
 }
