some random stuff

--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -34,7 +34,7 @@
 
     <%- body %>
 
-    <script async>
+    <script>
         const preloder = document.getElementById('preloder');
         window.addEventListener('load', function(){
             preloder.style.display = 'none';
