--- a/public/style/home.css
+++ b/public/style/home.css
@@ -1,9 +1,10 @@
 html{
     scroll-snap-type: y mandatory;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 section{
     scroll-snap-align: start;
+    scroll-snap-stop: normal;
 }
 
 .container{
