--- a/views/layout/home.ejs
+++ b/views/layout/home.ejs
@@ -2,11 +2,11 @@
 
 <link rel="stylesheet" href="../style/home.css">
 
-<section id="nissanR34" class="open">
-    <div class="container" style="background-image:url('../images/nissan r34-1.jpg')">
+<section id="model-s" class="open">
+    <div class="container" style="background-image:url('../images/model-s.jpg')">
         <div class="items">
             <div class="top">
-                <h1>Nissan r34</h1>
+                <h1>Model-S</h1>
                 <a href="#">Schedual a Demo Drive</a>
             </div>
             <div class="buttom">
@@ -17,11 +17,11 @@
     </div>
 </section>
 
-<section id="lancerEX">
-    <div class="container" style="background-image:url('../images/mitsubishi lancer ex-5.jpg')">
+<section id="model-3">
+    <div class="container" style="background-image:url('../images/model-3.jpg')">
         <div class="items">
             <div class="top">
-                <h1>Mitsubishi Lancer Evolution X</h1>
+                <h1>Model-3</h1>
                 <a href="#">Schedual a Demo Drive</a>
             </div>
             <div class="buttom">
@@ -32,11 +32,11 @@
     </div>
 </section>
 
-<section id="supraMK4">
-    <div class="container" style="background-image:url('../images/supra mk4-5.jpg')">
+<section id="model-x">
+    <div class="container" style="background-image:url('../images/model-x.jpg')">
         <div class="items">
             <div class="top">
-                <h1>Supra mk4</h1>
+                <h1>Model-X</h1>
                 <a href="#">Schedual a Demo Drive</a>
             </div>
             <div class="buttom">
@@ -47,11 +47,11 @@
     </div>
 </section>
 
-<section id="mazdaRX7">
-    <div class="container" style="background-image:url('../images/mazda rx7-5.jpg')">
+<section id="model-y">
+    <div class="container" style="background-image:url('../images/model-y.jpg')">
         <div class="items">
             <div class="top">
-                <h1>Mazda rx7</h1>
+                <h1>Model-Y</h1>
                 <a href="#">Schedual a Demo Drive</a>
             </div>
             <div class="buttom">
@@ -62,8 +62,36 @@
     </div>
 </section>
 
+<section id="solar-panel">
+    <div class="container" style="background-image: url('../images/solar-panel.jpg')">
+        <div class="items">
+            <div class="top">
+                <h1>Solar Panel</h1>
+                <p>Lowest Cost Solar Panels in the country.</p>
+            </div>
+            <div class="buttom">
+                <button style="background-color: rgba(52, 58, 64, .8); color: white;">Order Now</button>
+                <button style="background-color: rgba(229, 229, 229, .8);color: black;">Learn More</button>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="solar-roof">
+    <div class="container" style="background-image: url('../images/solar-roof.jpg')">
+        <div class="items">
+            <div class="top">
+                <h1>Solar Roof</h1>
+                <p>Produce Clean Energy From Your Roof.</p>
+            </div>
+            <div class="buttom">
+                <button style="background-color: rgba(52, 58, 64, .8); color: white;">Order Now</button>
+                <button style="background-color: rgba(229, 229, 229, .8);color: black;">Learn More</button>
+            </div>
+        </div>
+    </div>
+</section>
 <section id="accessories">
-    <div class="container" style="background-image: url('../images/accessories.png'); background-size: 350px;">
+    <div class="container" style="background-image: url('../images/accessories.jpg')">
         <div class="items">
             <div class="top">
                 <h1>Accessories</h1>
