--- a/views/navBar.ejs
+++ b/views/navBar.ejs
@@ -14,10 +14,13 @@
         <div class="header">
             <div class="logo"><a href="/"><img src="images/LOGO.png" alt="LOGO"></a></div>
             <ul class="menu1">
-                <li><a href="#nissanR34">Nissan R34</a></li>
-                <li><a href="#lancerEX">Mitsubishi L-EX</a></li>
-                <li><a href="#supraMK4">Supra MK4</a></li>
-                <li><a href="#mazdaRX7">Mazda RX7</a></li>
+                <li><a href="#model-s">Model-S</a></li>
+                <li><a href="#model-3">Model-3</a></li>
+                <li><a href="#model-x">Model-X</a></li>
+                <li><a href="#model-y">Model-Y</a></li>
+                <li><a href="#solar-panel">Solar Panel</a></li>
+                <li><a href="#solar-roof">Solar Roof</a></li>
+                <li><a href="#accessories">Accessories</a></li>
             </ul>
         
             <ul class="menu2">
@@ -33,10 +36,10 @@
         <div class="hamburgerMenu">
             <button onclick="closeMenu()"><img src="https://img.icons8.com/ios-filled/150/null/delete-sign--v1.png"/></button>
             <ul>
-                <li><a href="#nissanR34">Nissan r34</a></li>
-                <li><a href="#lancerEX">Mitsubishi L-EX</a></li>
-                <li><a href="#supraMK4">Supra MK4</a></li>
-                <li><a href="#mazdaRX7">Mazda RX7</a></li>
+                <li><a href="#model-s">Model-S</a></li>
+                <li><a href="#model-3">Model-3</a></li>
+                <li><a href="#model-x">Model-X</a></li>
+                <li><a href="#model-y">Model-Y</a></li>
                 <li><a href="#accessories">Accessories</a></li>            
                 <li><a href="#">Find Us</a></li>            
                 <li><a href="#">Support</a></li>            
