--- a/public/style/home.css
+++ b/public/style/home.css
@@ -3,8 +3,8 @@ html{
     /* overflow-y: scroll; */
 }
 section{
-    scroll-snap-align: start;
-    scroll-snap-stop: normal;
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 .container{
