--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -5,24 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JDM</title>
-    <link rel="icon" href="images/golo.png" type="image/icon type">
+    <link rel="icon" href="images/golo.ico" type="image/icon type">
 
     <link rel="stylesheet" href="style/primary.css">
-    <style>
-        #preloder{
-            background: white url('../images/preloder.gif') no-repeat center center;
-            background-size: 350px;
-            height: 100vh;
-            width: 100%;
-            position: fixed;
-            z-index: 100;
-        }
-        @media screen and (max-width:600px){
-            #preloder{
-                background-size: 280px;
-            }
-        }
-    </style>
 </head>
 <body>
 
@@ -33,12 +18,5 @@
     <%- include('./navBar') %>
 
     <%- body %>
-
-    <script>
-        const preloder = document.getElementById('preloder');
-        window.addEventListener('load', function(){
-            preloder.style.display = 'none';
-        })
-    </script>
 </body>
 </html>
